# desafio-ia

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/notebook/: desafio_ia.ipynb
app/src/: audio_utils.py  db.py  features.py  image_utils.py  model.py  video_utils.py
infra/: Dockerfile  Makefile  docker-compose.yml
