[project]
name = "desafio-ia"
version = "0.1.0"
description = ""
authors = [{ name = "Felipe Amaral", email = "felipedoamarals@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "numpy>=1.26,<3.0",
  "opencv-python>=4.8,<5.0",
  "astropy>=5,<7",
  "pymongo>=4.6,<5.0",
  "scikit-learn>=1.3,<2.0",
  "scikit-image>=0.21,<0.25",
  "matplotlib>=3.7,<4.0",
  "ffmpeg-python>=0.2,<0.3",
  "openai-whisper>=20231117",
  "jupyterlab>=4.1,<5.0"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"
